src/app/Contact/components/ContactUsForm.scss
.contact-form-container {
    border: 1px solid #adadad;
    border-radius: 8px;
    background-color: #f3f3f3;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
    padding: 2rem;

    label {
        align-self: flex-start;
    }

    h1 {
        font-size: 1.5rem;
        font-weight: 500;
        margin-bottom: 0.5rem;
    }

    button {
        background: #000;
        color: #f3f3f3;
        padding: 0.5rem 0;
        border-radius: 4px;
    }

    input[type="text"],
    input[type="email"],
    textarea {
        border-bottom: 1px solid #000;
        background: none;
        padding: 0.25rem 0.75rem;
    }

    textarea {
        min-height: 175px;
    }

    .contact-form-area {
        display: flex;
        flex-direction: column;
        //padding: 1rem;

        .cont-form-horizontal-field {
            display: flex;
            justify-content: space-evenly;
            padding-bottom: 2rem;
        }

        .cont-form-element {
            display: flex;
            flex: 1;
            flex-direction: column;
            padding: 0 0.5rem;
        }

        .cfe-last {
            padding-bottom: 2rem;
        }
    }
}

.cont-form-right-panel {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    width: 100%;
    max-width: 35rem;

    .cont-form-rp-container {
        display: flex;
        flex-direction: column;


        .cont-form-rp-details {
            display: flex;
            flex-direction: column;
            background: #f1f1f1;
            padding: 1rem;

            p {
                text-align: left;
            }
        }
    }
}

@media (min-width: 320px) {
    .contact-form-container {
        .contact-form-area {
            display: flex;
            width: 15rem;

            .cont-form-horizontal-field {
                display: flex;
                flex-direction: column;
                padding-bottom: 1rem;
            }

            .cont-form-element {
                display: flex;
                flex-direction: column;
                padding: 0.5rem 0.5rem;
            }

            .cfe-last {
                padding-bottom: 2rem;
            }
        }
    }

    .cont-form-right-panel {
        .cont-form-rp-container {
            flex-direction: column-reverse;

            .cont-form-rp-details {
                margin-bottom: 1rem;
            }
        }

        &:last-child {
            margin-bottom: 1rem;
            align-self: center;
        }
    }

    .contact-form-captcha {

        .cfc-captcha-area {
            display: block;
            border: 1px solid #000;
            border-radius: 8px;
            padding: 1rem;

            .cfcca-captcha-image {
                height: auto;
                width: 100%;
            }

            .cfcca-your-answer {
                width: 100%;
                text-align: center;
                padding: 0;
                margin-top: 1rem;
            }
        }
    }
}

@media (min-width: 475px) {
    .contact-form-container {
        .contact-form-area {
            display: flex;
            width: 25rem;

            .cont-form-horizontal-field {
                display: flex;
                flex-direction: column;
                padding-bottom: 1rem;
            }

            .cont-form-element {
                display: flex;
                flex-direction: column;
                padding: 0.5rem 0.5rem;
            }

            .cfe-last {
                padding-bottom: 2rem;
            }
        }
    }
}

@media (min-width: 640px) {
    .contact-form-container {
        .contact-form-area {
            display: flex;
            width: 30rem;

            .cont-form-horizontal-field {
                display: flex;
                flex-direction: row;
                padding-bottom: 2rem;
            }

            .cont-form-element {
                display: flex;
                padding: 0 0.5rem;
            }

            .cfe-last {
                padding-bottom: 2rem;
            }
        }
    }
}

@media (min-width: 768px) {
    .contact-form-container {
        .contact-form-area {
            display: flex;
            width: 30rem;
        }
    }

    .cont-form-right-panel {
        margin-left: 0;

        .cont-form-rp-container {
            flex-direction: column-reverse;

            .cont-form-rp-details {
                margin-bottom: 1rem;
            }
        }

        &:last-child {
            margin-bottom: 1rem;
            align-self: center;
        }
    }

    .contact-form-captcha {

        .cfc-captcha-area {
            display: flex;
            justify-content: space-evenly;
            gap: 0 1rem;
            border: 1px solid #000;
            border-radius: 8px;
            padding: 1rem;

            .cfcca-captcha-image {
                height: auto;
                width: 100%;
            }

            .cfcca-your-answer {
                width: 100%;
                text-align: center;
                padding: 0;
                margin: 0;
            }
        }
    }
}

@media (min-width: 1024px) {
    .contact-form-container {
        .contact-form-area {
            display: flex;
            width: 30rem;
        }
    }

    .cont-form-right-panel {
        .cont-form-rp-container {
            flex-direction: column;
        }

        &:last-child {
            align-self: flex-start;
        }
    }
}

@media (min-width: 1280px) {
    .contact-form-container {
        .contact-form-area {
            display: flex;
            width: 30rem;
        }
    }

    .cont-form-right-panel {
        .cont-form-rp-container {
            flex-direction: column;
        }

        &:last-child {
            align-self: flex-start;
        }
    }
}

@media (min-width: 1536px) {
    .contact-form-container {
        .contact-form-area {
            display: flex;
            width: 30rem;
        }
    }

    .cont-form-right-panel {
        margin-left: 1rem;

        .cont-form-rp-container {
            flex-direction: column;
        }

        &:last-child {
            align-self: flex-start;
        }
    }
}

